syntax="proto3";

option csharp_namespace="Grpctest.Messages";

message User {
    int32 id = 1;
    string firstName = 2;
    string lastName = 3;
    int64 birthday = 4;
    repeated Vehicle vehicles = 5;
}

message Vehicle {
    int32 id =1;
    string regNumber = 2;
}

message GetAllRequest {}

message GetByUserIdRequest {
    int32 userId = 1;
}

message UserRequest {
    User user = 1;
}

message UserResponse {
    User user  = 1;
}

message AddImageRequest {
    bytes data = 1;
}

message AddImageResponse {
    bool isOk = 1;
}

service UserService {
    rpc GetByUserId (GetByUserIdRequest) returns (UserResponse);
    rpc GetAll (GetAllRequest) returns (stream UserResponse);
    rpc Save (UserRequest) returns (UserResponse);
    rpc SaveAll (stream UserRequest) returns (stream UserResponse);
    rpc AddImage (stream AddImageRequest) returns (AddImageResponse);
}